--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,34 @@
+<div class="col-md-4 col-md-offset-4">
 <h1>Contact List</h1>
+</div>
 <div ng-controller="indexCtrl">
+  <div class="col-md-6">
   <ul>
-    <li ng-repeat="contact in contacts.contacts">
-      {{ contact.name }} - {{ contact.phone }} - {{ contact.email }}
-      <button ng-click="editContact(contact)">Edit</button>
-      <button ng-click="deleteContact(contact.id)">Delete</button>
+    <li ng-repeat="contact in contacts.contacts" class="list-unstyled">
+      <label>Name</label> {{ contact.name }} 
+      <br>
+      <label>Phone Number</label> {{ contact.phone }} 
+      <br>
+      <label>E-Mail</label> {{ contact.email }}
+      <br>
+      <button class="btn btn-warning" ng-click="editContact(contact)">Edit</button>
+      <button class="btn btn-danger" ng-click="deleteContact(contact.id)">Delete</button>
     </li>
   </ul>
+  </div>
+  <div class="col-md-4 col-md-offset-1">
   <form ng-submit="submitForm()">
-    <label>Name:</label>
-    <input type="text", placeholder="Name", ng-model="formContactName">
+    <label>Name</label>
+    <input type="text", placeholder="Name...", ng-model="formContactName" class="form-control">
     <br>
-    <label>Phone Number:</label>
-    <input type="text", placeholder="Phone Number", ng-model="formContactPhone">
+    <label>Phone Number</label>
+    <input type="text", placeholder="Phone Number...", ng-model="formContactPhone" class="form-control">
     <br>
-    <label>E-Mail:</label>
-    <input type="text", placeholder="E-Mail", ng-model="formContactEmail">
+    <label>E-Mail</label>
+    <input type="text", placeholder="E-Mail...", ng-model="formContactEmail" class="form-control">
     <br>
-    <input type="submit">
+    <input type="submit" class="btn btn-success">
+    <!-- <span><button></button></span> -->
   </form>
+  </div>
 </div>
