modified styling on index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,22 +12,23 @@
         <label>E-Mail</label>
         <input type="text", placeholder="E-Mail...", ng-model="formContactEmail" class="form-control">
         <br>
-        <input type="submit" class="btn btn-success">
+        <input type="submit" class="btn btn-primary">
         <!-- <span><button></button></span> -->
       </form>
       <h1>Your Contacts</h1>
       <ul>
       <li ng-repeat="contact in contacts.contacts" class="list-group list-unstyled">
-        <label>Name</label> {{ contact.name }} 
+        <label>Name - </label> {{ contact.name }} 
         <br>
-        <label>Phone Number</label> {{ contact.phone }} 
+        <label>Phone Number - </label> {{ contact.phone }} 
         <br>
-        <label>E-Mail</label> {{ contact.email }}
+        <label>E-Mail - </label> {{ contact.email }}
         <br>
         <button class="btn btn-warning btn-sm" ng-click="editContact(contact)">Edit</button>
         <button class="btn btn-danger btn-sm" ng-click="deleteContact(contact.id)">Delete</button>
       </li>
     </ul>
+    <br>
   </div>
 </div>
   <div class="col-md-6" id="right">
