--- a/app/assets/stylesheets/home.scss.erb
+++ b/app/assets/stylesheets/home.scss.erb
@@ -27,7 +27,7 @@ h1 {
 }
 
 .jumbotron-contact {
-  background-image: url("contacts.jpg");
+  background-image: url('<%= asset_path("contacts.jpg") %> ');
   background-image: no-repeat;
   background-size: cover;
   background-position: 100% 55%;
